@@ -64,7 +64,8 @@ EXULT_FLX_OBJECTS = \
 	data/play_1st_scene.shp \
 	data/extras.shp \
 	data/midi_conversion.shp \
-	data/sfx_conversion.shp
+	data/sfx_conversion.shp \
+	data/palette_fades.shp
 
 $(EXEC) : Makefile data/exult.flx $(OBJS) beos/exult.rsrc
 	$(CXX) $(LFLAGS) -o $@ $(OBJS) $(LIBS)
